[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Menus/main.gd" type="Script" id=1]
[ext_resource path="res://Art/Buttons/restart-button-idle.png" type="Texture" id=2]
[ext_resource path="res://Art/Buttons/restart-button-clicked.png" type="Texture" id=3]

[node name="game" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 128.0, 448.0 ],
"_edit_vertical_guides_": [ 128.0, 896.0 ]
}

[node name="restart" type="TextureButton" parent="."]
margin_left = 832.0
margin_right = 968.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 48.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 0, 320 )
color = Color( 0.0862745, 0.768627, 0.498039, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 912.0
margin_right = 960.0
margin_bottom = 576.0
rect_pivot_offset = Vector2( 0, 320 )
color = Color( 0.0862745, 0.768627, 0.498039, 1 )

[node name="Done" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
[connection signal="timeout" from="Done" to="." method="_on_Done_timeout"]
